welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var x=0

while (estSurBagel) {
	x=x+1
}

do {
    gauche()
} while (x>=3)

do {
    droite()
} while (x<2)

while (!estFaceMur) {
	avance()
}
